<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <DUT Name="ST_FrameFifoEntrydata_1" Id="{233f3022-2a32-4e0a-9e3a-b7b331355712}">
    <Declaration><![CDATA[TYPE ST_FrameFifoEntrydata_1 :
STRUCT	
	stRemoteAddr 	: ST_SockAddr;
	txdata : ARRAY[0..TXDATASIZE_1] OF BYTE; 
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>